@@ -108,8 +108,9 @@ void Combat_schedule::start_battle
 	if (gwin->get_camera_actor() != gwin->get_main_actor())
 		return;
 	unsigned long curtime = Game::get_ticks();
-					// .5 minute since last start?
-	if (curtime - battle_time >= 30000)
+		// If this is the avatar, and it has been at least .5 minute since last
+		// start, then change music. This allows the danger music to be heard.
+	if (npc == gwin->get_main_actor() && curtime - battle_time >= 30000)
 		{
 		Audio::get_ptr()->start_music_combat((rand()%2) ? 
 					CSAttacked1 : CSAttacked2, 0);
